Add clustering, gating, and cohort-wide clustering to the scatter plot
Scatter plot (ScatterPlotView):
- Apply Clusters: map k-means clusters to QuPath classes via a dialog
  (cluster->class, not training labels); background apply with progress
- Click a cluster legend entry to select its cells in the viewer
- Gating: "Annotation" and "Within class" filters restrict clustering to
  a subset; "Cluster markers" checklist sub-clusters on a focused panel,
  re-standardised over the active subset
- Full UMAP toggle to embed all cells (no 20k cap); k raised to 50 with an
  adaptive legend; status bar shows "clustered vs plotted" counts
- "Project Clustering..." button opens the cohort dialog

Project Cell Clustering (ProjectClusteringDialog):
- Fit one k-means on a sample pooled across selected images, then assign
  every cell cohort-wide to its nearest centroid and save per image
- Streams image-by-image (read/modify/save), never holding the whole
  project in memory; cluster x marker heatmap to name clusters
- ClusterPreviewWindow: non-interactive PCA/UMAP scatter of the sample

Native libraries (util/JvmModuleOpener):
- Opens java.base/java.lang at startup so Smile's native PCA/UMAP load
  without --add-opens; ScatterPlotView falls back to PCA on LinkageError

Menu: rename "Cell Scatter Plot..." to "Scatter Plots and Clustering...";
remove the separate "Project Cell Clustering..." item (now a button).

Docs: USER_GUIDE section 11 and CLAUDE.md updated.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>